Add VM automirror support
Allows shipping snapshots automatically to remote clusters on a cron,
identically to how autobackup handles local snapshot exports.

VMs are selected based on configured tags, and individual destination
clusters can be specified based on a colon-separated suffix to the
tag(s).

Automirror snapshots use the prefix "am" (analogous to "ab" for
autobackups) to differentiate them from normal "mr" mirrors.

--- a/pvc.sample.conf
+++ b/pvc.sample.conf
@@ -393,6 +393,8 @@ api:
     private_key: ""
 
 # Automatic backups
+# If this section is present, autobackups will be enabled; otherwise, they will be disabled.
+# The pvc-ansible roles manage this including the various timer units, so avoid adjusting this manually.
 autobackup:
 
   # Backup root path on the node, used as the remote mountpoint
@@ -450,6 +452,56 @@ autobackup:
 
       # This example shows a generic umount leveraging the backup_root_path variable
       - "/usr/bin/umount {backup_root_path}"
+
+# Automatic mirroring to peer clusters
+# If this section is present, automirrors will be enabled; otherwise, they will be disabled.
+# The pvc-ansible roles manage this including the various timer units, so avoid adjusting this manually.
+automirror:
+
+  # Destination clusters
+  # A list of destination cluster API endpoints to send mirrors to. 
+  # For each entry, the "name" field will be mapped to the "{cluster}" variable in the tag(s)
+  # above. For more details on how exactly this works, please consult the documentation.
+  destinations:
+
+    # An example entry; contains the same information as a "pvc connection" entry
+    # The key in this dictionary is the "name" of the cluster, which is what must be suffixed
+    # to a tag and is displayed in the report and status output.
+    cluster2:
+      # The destination address, either an IP or an FQDN the destination API is reachable at
+      address: pvc.cluster2.mydomain.tld
+      # The destination port (usually 7370)
+      port: 7370
+      # The API prefix (usually '/api/v1') without a trailing slash
+      prefix: "/api/v1"
+      # The API key of the destination
+      key: 00000000-0000-0000-0000-000000000000
+      # Whether or not to use SSL for the connection
+      ssl: yes
+      # Whether or not to verify SSL for the connection
+      verify_ssl: yes
+      # Storage pool for VMs on the destination
+      pool: vms
+
+  # Default destination
+  # The cluster name to send mirrors to for VMs without an explicit "{cluster}" tag
+  # Always required, even if there is only a single destination
+  default_destination: cluster2
+
+  # VM tag(s) to mirror
+  # Only VMs with at least one of the given tag(s) will be mirrored; all others will be skipped
+  # All mirror tags support suffixing a ":{cluster}" argument, which will override the default
+  # cluster and send mirrors to the given cluster name (in the list below). Multiple suffixed
+  # tags are supported; if more than one is, the VM will be mirrored to all specified clusters.
+  mirror_tags:
+    - "automirror"
+
+  # The number of snapshots to keep, on both sides - mirror snapshots older than the last
+  # X snapshots will be automatically removed to save space
+  # Depending on the interval specified in the pvc-ansible variables, this may be either a
+  # relatively short or relatively long time.
+  keep_snapshots: 7
+
 
 # VIM modeline, requires "set modeline" in your VIMRC
 # vim: expandtab shiftwidth=2 tabstop=2 filetype=yaml
