--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ override_dh_python3:
 
 override_dh_auto_clean:
 	find $(CURDIR) -name "__pycache__" -o -name ".pybuild" -exec rm -fr {} + || true
-	rm -r $(CURDIR)/client-cli/build
+	rm -r $(CURDIR)/client-cli/build || true
 
 # If you need to rebuild the Sphinx documentation
 # Add spinxdoc to the dh --with line
